server/src/tree-sitter-p4/corpus/TypeDeclarations.txt
================================================================================
type declarations
================================================================================

typedef bit<9>  egressSpec_t;
typedef bit<48> macAddr_t;
typedef bit<32> ip4Addr_t;


--------------------------------------------------------------------------------

(source_file
  (declaration
    (typeDeclaration
      (typedefDeclaration
        (typeRef
          (baseType
            (INTEGER)))
        (name
          (IDENTIFIER)))))
  (declaration
    (typeDeclaration
      (typedefDeclaration
        (typeRef
          (baseType
            (INTEGER)))
        (name
          (IDENTIFIER)))))
  (declaration
    (typeDeclaration
      (typedefDeclaration
        (typeRef
          (baseType
            (INTEGER)))
        (name
          (IDENTIFIER))))))
